--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,17 +1,21 @@
-.container {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+* {
+	box-sizing: border-box;
 }
 
-.hello-world {
-    border: 4px solid slateblue;
-    outline: 4px solid rebeccapurple;
-    color: slateblue;
-    padding: 24px;
+.game-container {
+	margin: 2rem auto;
+	outline: 1px solid red;
+	max-width: 800px;
+	min-height: 400px;
+	position: relative;
+}
 
-    h1 {
-        margin: 0;
-    }
+.player {
+	height: 4rem;
+	width: 4rem;
+	background: red;
+	border: 1px solid slateblue;
+	position: absolute;
+	transition: all 0.5s ease-in-out;
+	transform-origin: center;
 }
