--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,23 +1,51 @@
 * {
 	box-sizing: border-box;
+	border-width: 0.5rem !important;
+	outline-width: 0.5rem !important;
+	border-radius: 100%;
 }
 
 .game-container {
 	margin: 2rem auto;
-	outline: 1px solid red;
+	outline: 1px solid transparentize(red, 0.75);
 	max-width: 800px;
 	min-height: 400px;
 	position: relative;
 	background: white;
+	overflow: hidden;
 }
 
 .player {
 	height: 3rem;
 	width: 3rem;
-	border: 1px solid slateblue;
-	background: transparentize(slateblue, 0.9);
+	border: 1px solid transparentize(slateblue, 0.75);
+	background: transparentize(slateblue, 0.25);
 	outline: 1px;
 	position: absolute;
-	transform-origin: center;
-	border-radius: 100%;
+	// transform-origin: center;
+	// border-radius: 100%;
+	// animation: 8s linear orbitClockwise infinite;
+}
+
+.place {
+	border: 1px solid transparentize(green, 0.75);
+	background: transparentize(green, 0.25);
+}
+
+@keyframes orbit-clockwise {
+	0% {
+		transform: rotate(0);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes orbit-counterclockwise {
+	0% {
+		transform: rotate(0);
+	}
+	100% {
+		transform: rotate(-360deg);
+	}
 }
