--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,6 +12,11 @@
 	position: relative;
 	background: white;
 	overflow: hidden;
+	background: indigo;
+
+	// max-width: 100vw;
+	// min-height: 100vh;
+	// margin: 0;
 }
 
 .player {
