--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,11 +4,17 @@
 	outline-width: 0.5rem !important;
 }
 
+body {
+	padding: 0;
+	margin: 0;
+}
+
 .game-container {
-	margin: 2rem auto;
-	outline: 1px solid transparentize(red, 0.75);
-	max-width: 800px;
-	min-height: 400px;
+	margin: 0;
+	padding: 0;
+	// outline: 1px solid transparentize(red, 0.75);
+	max-width: 100%;
+	min-height: 100vh;
 	position: relative;
 	background: white;
 	overflow: hidden;
