--- a/index.scss
+++ b/index.scss
@@ -2,4 +2,18 @@ html,
 body {
 	margin: 0;
 	padding: 0;
+	height: 100vh;
+	width: 100%;
+}
+
+#grid {
+	display: grid;
+	height: 100%;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr 1fr;
+
+	> * {
+		border: 1px solid black;
+		overflow: hidden;
+	}
 }
